# garden

./: .gitignore  AGENTS.md  Cargo.toml  README.md  bacon.toml  package-lock.json  package.json  tailwind.config.js
assets/: input.css
posts/: art-of-digital-gardening.md  building-personal-knowledge-system.md  lessons-from-open-source.md  rust-web-development-axum.md
src/: main.rs
static/css/: app.css
templates/: base.html  blog.html  home.html  post.html
