[package]
name = "blog"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
axum = "0.8.4"
chrono = { version = "0.4", features = ["serde"] }
gray_matter = "0.2"
pulldown-cmark = "0.12"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9"
tera = "1.20.0"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = {version="0.6.6", features = ["fs"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
